Add more animations

--- a/_includes/about/contact-cta-about.html
+++ b/_includes/about/contact-cta-about.html
@@ -1,7 +1,7 @@
 <section class="bg-secondary-gradient text-center contact-cta-about">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-8">
+            <div class="col-lg-8" data-aos="fade-up">
                 <h5 class="text-info spaced mb-4">CONTACT US TODAY</h5>
                 <h2 class="mb-4">Want to find out how we can help? Contact us today</h2>
                 <a href="{{ '/contact' | relative_url }}">
