--- a/_includes/services/about-services.html
+++ b/_includes/services/about-services.html
@@ -1,7 +1,7 @@
 <section class="about-services">
     <div class="container">
         <div class="row justify-content-center mb-5">
-            <div class="col-md-10 text-center">
+            <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
                 <img class="bg-line-services" src="{{ 'assets/images/icons/dashed_line.svg' | relative_url }}" alt="Background line">
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">VNK CONSULTANTS SERVICES</h5>
