--- a/_includes/services/other-areas.html
+++ b/_includes/services/other-areas.html
@@ -1,43 +1,43 @@
 <section class="other-areas">
     <div class="container">
         <div class="row mb-5">
-            <div class="col">
+            <div class="col" data-aos="fade-up">
                 <h2 class="text-center">Other areas of expertise we consult in</h2>
             </div>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-4">
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Custom Web, Mobile and Application Development Services</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Application and Network Security Auditing and Penetration Testing</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Cloud Computing Platforms and Infrastructure Solutions</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Enterprise E-Mail System Deployment and Migrations</p>
                 </div>
             </div>
             <div class="col-md-4">
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up" data-aos-delay="100">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Database, E-Mail, Firewall, and Application Server Support</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up" data-aos-delay="100">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Enterprise Data Storage Strategies and Disaster Recovery Solutions</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up" data-aos-delay="100">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Virtualization Technology Solutions, Server & Desktop Consolidation</p>
                 </div>
-                <div class="d-flex align-items-start line-height-small mb-3">
+                <div class="d-flex align-items-start line-height-small mb-3" data-aos="fade-up" data-aos-delay="100">
                     <img class="mr-3" src="{{ 'assets/images/icons/blue-tick.svg' | relative_url }}" alt="Tick">
                     <p class="text-xlarge text-primary">Software Installs, Updates and User Management</p>
                 </div>
