--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -10,7 +10,7 @@
 }
 
 .header-page {
-    height: 700px;
+    min-height: 700px;
     background-size: cover;
     background-repeat: no-repeat;
     margin-bottom: 100px;
