--- a/_includes/common/header-page.html
+++ b/_includes/common/header-page.html
@@ -4,7 +4,7 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-10 text-center">
+            <div class="col-lg-10 text-center" data-aos="fade-up">
                 <h1 class="text-white mb-4">{{ page.header_title }}</h1>
                 <p class="text-xlarge text-white">{{ page.header_text }}</p>
             </div>
