--- a/_includes/team/core-team.html
+++ b/_includes/team/core-team.html
@@ -1,7 +1,7 @@
 <section class="bg-secondary-gradient core-team">
     <div class="container">
         <div class="row justify-content-center mb-5">
-            <div class="col-lg-8 text-center">
+            <div class="col-lg-8 text-center" data-aos="fade-up" data-aos-offset="300">
                 <div class="team-icon bg-white rounded-circle mx-auto mb-4">
                     <img src="{{ 'assets/images/icons/social.svg' | relative_url }}" alt="Team">
                 </div>
@@ -11,7 +11,7 @@
         </div>
         {% for member in site.data.team %}
             {% cycle 'row-start': '<div class="row justify-content-center">', '' %}
-                <div class="col-md-5 mb-4">
+                <div class="col-md-5 mb-4" data-aos="zoom-in-up" {% cycle '', 'data-aos-delay="100"' %}>
                     <div class="bg-white rounded border shadow d-flex align-items-center p-4">
                         {% if member.image %}
                             <img class="rounded-circle mr-5" src="{{ 'assets/images/team/' | relative_url | append: member.image }}" alt="{{ member.name }}" width="87">
