--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -57,10 +57,14 @@
     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
     crossorigin="anonymous"></script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 <script type="text/javascript" src="{{ 'assets/js/animate.js' | relative_url }}"></script>
-<script type="text/javascript" src="{{ 'assets/js/carousel.js' | relative_url }}"></script>
-<script type="text/javascript" src="{{ 'assets/js/contact.js' | relative_url }}"></script>
+{% if page.carousel %}
+    <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+    <script type="text/javascript" src="{{ 'assets/js/carousel.js' | relative_url }}"></script>
+{% endif %}
+{% if page.contact %}
+    <script type="text/javascript" src="{{ 'assets/js/contact.js' | relative_url }}"></script>
+{% endif %}
 {% if page.map %}
     <script type="text/javascript" src="{{ 'assets/js/map.js' | relative_url }}"></script>
 {% endif %}
