--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -58,3 +58,11 @@ h1, h4, h5 {
     padding-top: 130px;
     padding-bottom: 80px;
 }
+
+@include media-breakpoint-down(md) {
+
+    .footer-menu {
+        padding-top: 40px;
+        padding-bottom: 40px;
+    }
+}
