--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -11,8 +11,7 @@
 
 .header-page {
     min-height: 700px;
-    background-size: cover;
-    background-repeat: no-repeat;
+    background-color: transparent;
     margin-bottom: 100px;
 }
 
