--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -53,3 +53,34 @@
     padding-top: 90px;
     padding-bottom: 100px;
 }
+
+.about-software {
+    position: relative;
+    z-index: -101;
+
+    .bg-shapes-services {
+        position: absolute;
+        left: 50%;
+        top: -240px;
+        transform: translateX(-50%);
+        z-index: -1;
+    }
+}
+
+.environments {
+    padding-top: 120px;
+    padding-bottom: 80px;
+
+    .environment-card {
+        box-shadow: 0 25px 49px 0 rgba(78, 81, 144, 0.07);
+    }
+}
+
+@include media-breakpoint-up(lg) {
+
+    .environments {
+        .environment-card {
+            height: 300px;
+        }
+    }
+}
