Add infrastructure page

--- a/_includes/services/environments.html
+++ b/_includes/services/environments.html
@@ -13,7 +13,7 @@
                     <div class="environment-card bg-white rounded pt-5 p-4 mb-4">
                         <img class="mb-4" src="{{ 'assets/images/icons/' | relative_url | append: environment.image }}" alt="{{ environment.name }}">
                         <h4 class="text-info mb-3">{{ environment.name }}</h4>
-                        <p class="text-small font-weight-light text-grey mb-0">{{ environment.platforms }}</p>
+                        <p class="text-xsmall font-weight-light text-gray mb-0">{{ environment.platforms }}</p>
                     </div>
                 </div>
             {% if forloop.last %}</div>{% else %}
