--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -10,6 +10,10 @@ h1, h4, h5 {
     color: $gray-500;
 }
 
+.text-xsmall {
+    font-size: $font-size-xs;
+}
+
 .text-small {
     font-size: $font-size-sm;
 }
