--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -33,7 +33,8 @@ $font-family-base: $font-family-sans-serif;
 
 $font-size-root: 1rem;
 $font-size-base: 1.125rem;
-$font-size-sm: $font-size-root * .875;
+$font-size-xs: $font-size-root * .875;
+$font-size-sm: $font-size-root * 1;
 $font-size-lg: $font-size-root * 1.25;
 $font-size-xl: $font-size-root * 1.5;
 
