--- a/_sass/services.scss
+++ b/_sass/services.scss
@@ -84,3 +84,25 @@
         }
     }
 }
+
+.infrastructure-solutions {
+    padding-top: 100px;
+    padding-bottom: 120px;
+
+    .section-margin {
+        margin-bottom: 100px;
+    }
+
+    .infrastructure-card {
+        box-shadow: 0 25px 49px 0 rgba(78, 81, 144, 0.07);
+    }
+}
+
+@include media-breakpoint-up(lg) {
+
+    .infrastructure-solutions {
+        .infrastructure-card {
+            height: 350px;
+        }
+    }
+}
