Fix mobile navigation and adjust mobile spacing

--- a/_includes/common/header-page.html
+++ b/_includes/common/header-page.html
@@ -1,10 +1,10 @@
 <header class="header-page jumbotron jumbotron-fluid overflow-hidden {{ include.class }}" data-parallax="scroll"
     data-image-src="{{ 'assets/images/header/' | relative_url | append: page.header_image }}">
-    {% include common/navigation.html class='navbar-margin' %}
+    {% include common/navigation.html class='section-margin' %}
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-lg-10 text-center" data-aos="fade-left">
+            <div class="col-lg-10 text-center" data-aos="fade-up">
                 <h1 class="text-white mb-4">{{ page.header_title }}</h1>
                 <p class="text-xlarge text-white">{{ page.header_text }}</p>
             </div>
