--- a/_includes/common/team-list.html
+++ b/_includes/common/team-list.html
@@ -1,4 +1,4 @@
-<section class="team {{ include.class }}">
+<section class="section-padding {{ include.class }}">
     <div class="container">
         <div class="row mb-5">
             <div class="col" data-aos="fade-up">
