--- a/_includes/services/about-services.html
+++ b/_includes/services/about-services.html
@@ -1,4 +1,4 @@
-<section class="about-services">
+<section class="section-margin behind-header">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
