--- a/_includes/services/infrastructure-solutions.html
+++ b/_includes/services/infrastructure-solutions.html
@@ -1,4 +1,4 @@
-<div class="infrastructure-solutions bg-secondary-gradient">
+<div class="section-padding bg-secondary-gradient">
     <div class="container">
         <div class="row justify-content-around section-margin">
             <div class="col-md-5 text-center" data-aos="fade-up">
