--- a/_includes/services/other-areas.html
+++ b/_includes/services/other-areas.html
@@ -1,4 +1,4 @@
-<section class="other-areas">
+<section class="section-padding bg-secondary-gradient">
     <div class="container">
         <div class="row mb-5">
             <div class="col" data-aos="fade-up">
