--- a/_includes/services/we-secure.html
+++ b/_includes/services/we-secure.html
@@ -1,4 +1,4 @@
-<section class="we-secure bg-secondary-gradient">
+<section class="section-padding bg-secondary-gradient">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5" data-aos="fade-up">
