--- a/_sass/contact.scss
+++ b/_sass/contact.scss
@@ -1,3 +1,8 @@
+.contact-cta {
+    background-image: url("../images/backgrounds/blue_banner_bg.svg");
+    background-size: cover;
+}
+
 .contact-form {
     margin-bottom: 100px;
 }
