--- a/_includes/about/about-about.html
+++ b/_includes/about/about-about.html
@@ -1,4 +1,4 @@
-<section class="about-about">
+<section>
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
