--- a/_includes/about/contact-cta-about.html
+++ b/_includes/about/contact-cta-about.html
@@ -1,4 +1,4 @@
-<section class="bg-secondary-gradient text-center contact-cta-about">
+<section class="section-padding bg-secondary-gradient text-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8" data-aos="fade-up">
