--- a/_includes/common/contact-cta.html
+++ b/_includes/common/contact-cta.html
@@ -1,4 +1,4 @@
-<section class="text-center contact-cta">
+<section class="section-padding contact-cta text-center">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8" data-aos="fade-up">
