--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -1,5 +1,5 @@
 <footer>
-    <div class="footer-menu">
+    <div class="section-padding">
         <div class="container">
             <div class="row">
                 <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up">
