--- a/_includes/common/navigation.html
+++ b/_includes/common/navigation.html
@@ -9,7 +9,7 @@
         </button>
     
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav align-items-center ml-auto">
+            <ul class="navbar-nav ml-auto">
                 {% for item in site.data.navigation.main %}
                     {% if item.sub_navigation %}
                         <li class="nav-item dropdown {% if page.url == item.link %}active{% endif %}">
