--- a/_includes/home/header.html
+++ b/_includes/home/header.html
@@ -8,7 +8,7 @@
                 <p class="text-xlarge text-white mb-5">Supporting your IT needs and goals is what drives our business and what provides yours with the best of breed of technology.</p>
                 <div class="d-flex">
                     <a href="{{ '/services' | relative_url }}">
-                        <button class="btn btn-outline-white btn-wide mr-4">Our Services</button>
+                        <button class="btn btn-outline-white btn-wide mr-2 mr-sm-4">Our Services</button>
                     </a>
                     <a href="{{ '/contact' | relative_url }}">
                         <button class="btn btn-outline-white btn-wide">Contact Us</button>
