--- a/_includes/services/about-infrastructure.html
+++ b/_includes/services/about-infrastructure.html
@@ -1,4 +1,4 @@
-<section class="about-software mb-5">
+<section class="behind-header mb-5">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
