--- a/_includes/services/approach.html
+++ b/_includes/services/approach.html
@@ -1,4 +1,4 @@
-<section class="approach">
+<section class="section-padding">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5" data-aos="fade-up">
