--- a/_includes/services/environments.html
+++ b/_includes/services/environments.html
@@ -1,4 +1,4 @@
-<section class="environments bg-secondary-gradient">
+<section class="section-padding bg-secondary-gradient">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-9 text-center" data-aos="fade-up">
