--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -1,6 +1,5 @@
 .header-home {
     min-height: 100vh;
-    margin-bottom: 100px;
     background-image: url("../images/header/header_home.svg");
     background-size: cover;
 
@@ -12,14 +11,9 @@
 .header-page {
     min-height: 700px;
     background-color: transparent;
-    margin-bottom: 100px;
 }
 
 .navbar {
-
-    &.navbar-margin {
-        margin-bottom: 100px;
-    }
 
     .nav-item {
         font-size: $font-size-lg;
@@ -31,14 +25,32 @@
             height: 2px;
             width: 0;
             transition: width 0.4s;
-            margin: auto;
         }
 
-        &:hover .underline,
-        &:active .underline,
         &.active .underline {
-            width: 80%;
+            width: 100px;
         }
     }
+}
 
+@include media-breakpoint-up(lg) {
+
+    .header-home,
+    .header-page {
+        margin-bottom: 100px;
+    }
+
+    .navbar {    
+        .nav-item {
+            .underline {
+                margin: auto;
+            }
+    
+            &:hover .underline,
+            &:active .underline,
+            &.active .underline {
+                width: 80%;
+            }
+        }
+    }
 }
