Fix icons and images

--- a/_includes/services/about-software.html
+++ b/_includes/services/about-software.html
@@ -10,13 +10,13 @@
         </div>
         <div class="row justify-content-center">
             <div class="col-md-5 text-center mb-4 mb-md-0" data-aos="fade-up">
-                <img class="mb-4" src="{{ 'assets/images/icons/developers.svg' | relative_url }}" alt="Expert Developers">
+                <img class="mb-4" src="{{ 'assets/images/icons/developers.svg' | relative_url }}" alt="Expert Developers" height="98">
                 <h5 class="text-info spaced mb-4">INFRASTRUCTURE SOLUTIONS</h5>
                 <h2 class="mb-4">Expert<br>Developers</h2>
                 <p class="line-height-large">Our expert developers can build around your existing architecture, integrate it into a new framework, or mold it to fit your business requirements.</p>
             </div>
             <div class="col-md-5 text-center" data-aos="fade-up" data-aos-delay="100">
-                <img class="mb-4" src="{{ 'assets/images/icons/secure.svg' | relative_url }}" alt="Secure Applications">
+                <img class="mb-4" src="{{ 'assets/images/icons/secure.svg' | relative_url }}" alt="Secure Applications" height="98">
                 <h5 class="text-info spaced mb-4">INFRASTRUCTURE SOLUTIONS</h5>
                 <h2 class="mb-4">We Create Secure Applications</h2>
                 <p class="line-height-large">We understand your focus is on your business bottom line, not the technology behind it. That’s why we create secure applications that streamline process flows to maximize business productivity.</p>
