--- a/_includes/services/infrastructure-solutions.html
+++ b/_includes/services/infrastructure-solutions.html
@@ -22,28 +22,28 @@
         <div class="row">
             <div class="col-lg-3" data-aos="zoom-in-up">
                 <div class="infrastructure-card bg-white rounded p-4 mb-4 mt-4">
-                    <img class="mb-4" src="{{ 'assets/images/icons/trained.svg' | relative_url }}" alt="Highly trained">
+                    <img class="mb-4" src="{{ 'assets/images/icons/trained.svg' | relative_url }}" alt="Highly trained" width="85">
                     <h4 class="text-dark font-weight-normal mb-4">Highly Trained</h4>
                     <p class="font-weight-light text-small mb-0">VNK are highly trained, experienced technology experts</p>
                 </div>
             </div>
             <div class="col-lg-3" data-aos="zoom-in-up" data-aos-delay="100">
                 <div class="infrastructure-card bg-white rounded p-4 mb-4">
-                    <img class="mb-4" src="{{ 'assets/images/icons/tech.svg' | relative_url }}" alt="Simplified Tech">
+                    <img class="mb-4" src="{{ 'assets/images/icons/tech.svg' | relative_url }}" alt="Simplified Tech" width="85">
                     <h4 class="text-dark font-weight-normal mb-4">Simplified Tech</h4>
                     <p class="font-weight-light text-small mb-0">Simplified technology infrastructure solutions resulting in reduced operational costs</p>
                 </div>
             </div>
             <div class="col-lg-3" data-aos="zoom-in-up" data-aos-delay="200">
                 <div class="infrastructure-card bg-white rounded p-4 mb-4 mt-4">
-                    <img class="mb-4" src="{{ 'assets/images/icons/knowledge.svg' | relative_url }}" alt="Expert Knowledge">
+                    <img class="mb-4" src="{{ 'assets/images/icons/knowledge.svg' | relative_url }}" alt="Expert Knowledge" width="85">
                     <h4 class="text-dark font-weight-normal mb-4">Expert Knowledge</h4>
                     <p class="font-weight-light text-small mb-0">Expert knowledge of the latest solutions for maximum data security</p>
                 </div>
             </div>
             <div class="col-lg-3" data-aos="zoom-in-up" data-aos-delay="300">
                 <div class="infrastructure-card bg-white rounded p-4 mb-4">
-                    <img class="mb-4" src="{{ 'assets/images/icons/experienced.svg' | relative_url }}" alt="Experienced">
+                    <img class="mb-4" src="{{ 'assets/images/icons/experienced.svg' | relative_url }}" alt="Experienced" width="85">
                     <h4 class="text-dark font-weight-normal mb-4">Experienced</h4>
                     <p class="font-weight-light text-small mb-0">Experienced across many industries and technology platforms including Cisco, EMC, Microsoft Azure, AWS, VMware and others</p>
                 </div>
