--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -34,6 +34,7 @@
                 <div class="col-md-3" data-aos="fade-up" data-aos-delay="300">
                     <h5 class="mb-4">Our Address</h5>
                     <p>1 Yonge St. Suite 1801<br>Toronto, ON M5E1W7</p>
+                    <img src="{{ 'assets/images/logos/proudly_canadian.jpg' | relative_url }}" alt="Proudly Canadian" width="173">
                 </div>
             </div>
         </div>
