Fix for aos cuasing invisible content

--- a/_includes/about/history.html
+++ b/_includes/about/history.html
@@ -3,7 +3,7 @@
         <div class="row justify-content-center align-items-center">
             <div class="col-lg-5" data-aos="fade-up">
                 <div>
-                    <img class="about-bg-image" src="{{ 'assets/images/about/bg-shape.svg' | relative_url }}" alt="Background shape">
+                    <img class="about-bg-image img-fluid" src="{{ 'assets/images/about/bg-shape.svg' | relative_url }}" alt="Background shape">
                     <img class="about-image img-fluid" src="{{ 'assets/images/about/about-us.png' | relative_url }}" alt="About us">
                 </div>
             </div>
@@ -15,7 +15,7 @@
         <div class="row justify-content-center">
             <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
                 <div>
-                    <img class="about-bg-image" src="{{ 'assets/images/about/bg-shape.svg' | relative_url }}" alt="Background shape">
+                    <img class="about-bg-image img-fluid" src="{{ 'assets/images/about/bg-shape.svg' | relative_url }}" alt="Background shape">
                     <img class="about-image img-fluid" src="{{ 'assets/images/about/our-history.png' | relative_url }}" alt="Our history">
                 </div>
             </div>
