--- a/_includes/services/about-security.html
+++ b/_includes/services/about-security.html
@@ -2,7 +2,9 @@
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
-                <img class="bg-shapes-services" src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background shapes">
+                <div class="bg-shapes bg-shapes-services">
+                    <img src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background shapes">
+                </div>
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">VNK CONSULTANTS SERVICES</h5>
                 <h2>We conduct intensive testing and reporting</h2>
