--- a/_includes/services/approach.html
+++ b/_includes/services/approach.html
@@ -8,7 +8,7 @@
                 <p class="font-weight-light line-height-large">Our comprehensive solution is managed by our security experts and stems from a powerful combination of best-in-class technology.</p>
             </div>
             <div class="col-lg-5">
-                <div class="approach-card bg-white rounded d-flex align-items-center p-4 mb-4" data-aos="fade-left">
+                <div class="approach-card bg-white rounded d-flex align-items-center p-4 mb-4" data-aos="zoom-in-up">
                     <div class="progress-circle position-relative mr-4">
                         <img src="{{ 'assets/images/icons/progress-high.svg' | relative_url }}" alt="Application security">
                         <span class="progress-percentage">80%</span>
@@ -18,7 +18,7 @@
                         <p class="text-gray font-weight-light mb-0">written for the web contain at least one vulnerability on initial assessment</p>
                     </div>
                 </div>
-                <div class="approach-card bg-white rounded d-flex align-items-center p-4 mb-4" data-aos="fade-left">
+                <div class="approach-card bg-white rounded d-flex align-items-center p-4 mb-4" data-aos="zoom-in-up">
                     <div class="progress-circle position-relative mr-4">
                         <img src="{{ 'assets/images/icons/progress-high.svg' | relative_url }}" alt="Application security">
                         <span class="progress-percentage">83%</span>
@@ -28,7 +28,7 @@
                         <p class="text-gray font-weight-light mb-0">account for more than a third of data breaches</p>
                     </div>
                 </div>
-                <div class="approach-card bg-white rounded d-flex align-items-center p-4" data-aos="fade-left">
+                <div class="approach-card bg-white rounded d-flex align-items-center p-4" data-aos="zoom-in-up">
                     <div class="progress-circle position-relative mr-4">
                         <img class="float-right" src="{{ 'assets/images/icons/progress-low.svg' | relative_url }}" alt="Application security">
                         <span class="progress-percentage">25%</span>
