--- a/_includes/services/we-secure.html
+++ b/_includes/services/we-secure.html
@@ -8,7 +8,7 @@
             </div>
             <div class="col-lg-5" data-aos="fade-up" data-aos-delay="100">
                 <div class="security-card bg-white rounded p-5 mx-auto">
-                    <img class="mb-4" src="{{ 'assets/images/icons/application-security.svg' | relative_url }}" alt="Application security">
+                    <img class="mb-4" src="{{ 'assets/images/icons/application-security.svg' | relative_url }}" alt="Application security" width="143">
                     <h3 class="text-info mb-4">Application Security</h3>
                     <p class="font-weight-light">We’ve worked with the most security centric agencies and know from experience strong security.</p>
                 </div>
