--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -2,6 +2,7 @@
     min-height: 100vh;
     background-image: url("../images/header/header_home.svg");
     background-size: cover;
+    overflow-x: hidden;
 
     .header-image {
         height: 70vh;
