--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -1,6 +1,6 @@
-html, body {
-    overflow-x: hidden;
-}
+// html, body {
+//     overflow-x: hidden;
+// }
 
 h1, h4, h5 {
     font-weight: 500;
@@ -45,6 +45,16 @@ h1, h4, h5 {
 
 .bg-secondary-gradient {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
+}
+
+.bg-shapes {
+    position: absolute;
+    left: 50%;
+    top: -300px;
+    transform: translateX(-50%);
+    z-index: -1;
+    overflow: hidden;
+    max-width: 100%;
 }
 
 .section-padding {
