--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -68,7 +68,7 @@
     crossorigin="anonymous"></script>
 <script type="text/javascript" src="{{ 'assets/js/parallax.min.js' | relative_url }}"></script>
 <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script type="text/javascript" src="{{ 'assets/js/animate.js' | relative_url }}"></script>
+<!-- <script type="text/javascript" src="{{ 'assets/js/animate.js' | relative_url }}"></script> -->
 {% if page.carousel %}
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
     <script type="text/javascript" src="{{ 'assets/js/carousel.js' | relative_url }}"></script>
@@ -79,3 +79,9 @@
 {% if page.map %}
     <script type="text/javascript" src="{{ 'assets/js/map.js' | relative_url }}"></script>
 {% endif %}
+<script>
+    AOS.init({
+      startEvent: 'load',
+      duration: 800
+    });
+</script>
