Update telephone number references

--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -28,7 +28,7 @@
                 <h2 class="mb-5">Don’t Hesitate to contact with us for any kind of information</h2>
                 <p class="text-xlarge mb-4">
                     <img class="mr-3" src="{{ 'assets/images/icons/phone.svg' | relative_url }}" alt="Phone number">
-                    <a class="text-primary" href="tel:1-833-364-0009">1-833-364-0009</a>
+                    <a class="text-primary" href="tel:0018333640009">1-833-364-0009</a>
                 </p>
                 <p class="text-primary text-xlarge mb-4">
                     <img class="mr-3" src="{{ 'assets/images/icons/map.svg' | relative_url }}" alt="Address">
