--- a/_includes/common/footer.html
+++ b/_includes/common/footer.html
@@ -3,10 +3,10 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up">
-                    <img class="mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
+                    <img class="img-fluid mb-3" src="{{ 'assets/images/logos/vnk-logo.png' | relative_url }}" alt="VNK Consulting"
                         width="173">
                     <p class="mb-3"><a class="text-primary" href="mailto:info@vnkconsult.com">info@vnkconsult.com</a></p>
-                    <p><u><a class="text-primary text-large" href="tel:(416) 237-0009">(416) 237-0009</a></u></p>
+                    <p><u><a class="text-primary text-large" href="tel:0014162370009">(416) 237-0009</a></u></p>
                 </div>
                 <div class="col-md-3 mb-4 mb-md-0" data-aos="fade-up" data-aos-delay="100">
                     <h5 class="mb-4">Services</h5>
@@ -43,7 +43,7 @@
                             </li>
                         {% endfor %}
                     </ul>
-                    <img src="{{ 'assets/images/logos/proudly_canadian.jpg' | relative_url }}" alt="Proudly Canadian">
+                    <img class="img-fluid" src="{{ 'assets/images/logos/proudly_canadian.jpg' | relative_url }}" alt="Proudly Canadian">
                 </div>
             </div>
         </div>
