--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -22,7 +22,7 @@
                     </div>
                     <button type="submit" class="btn btn-primary btn-wide">Send Message</button>
                 </form>
-                <div id="responseContainer"></div>
+                <div id="responseContainer" class="mt-3"></div>
             </div>
             <div class="col-md-6">
                 <h2 class="mb-5">Don’t Hesitate to contact with us for any kind of information</h2>
