Fix background shapes on titles

--- a/_includes/home/about-home.html
+++ b/_includes/home/about-home.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up">
-                <div class="bg-shapes bg-shapes-home">
+                <div class="bg-shapes-title">
                     <img src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background shapes">
                 </div>
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
