--- a/_includes/about/about-about.html
+++ b/_includes/about/about-about.html
@@ -1,7 +1,10 @@
-<section>
+<section class="behind-header">
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
+                <div class="bg-shapes-title">
+                    <img src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background shapes">
+                </div>
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">ABOUT VNK CONSULTANTS</h5>
                 <h2 class="mb-5">At VNK Consulting Group, information technology is what we do</h2>
