--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,14 +47,19 @@ h1, h4, h5 {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
 }
 
-.bg-shapes {
+.bg-shapes-title {
     position: absolute;
     left: 50%;
-    top: -300px;
+    top: -240px;
     transform: translateX(-50%);
     z-index: -1;
     overflow: hidden;
     max-width: 100%;
+
+    img {
+        margin-left: 50%;
+        transform: translateX(-50%);
+    }
 }
 
 .section-padding {
