Add more background shapes

--- a/_includes/services/about-services.html
+++ b/_includes/services/about-services.html
@@ -2,8 +2,8 @@
     <div class="container">
         <div class="row justify-content-center mb-5">
             <div class="col-md-10 text-center" data-aos="fade-up" data-aos-offset="300">
-                <div class="bg-shapes-title">
-                    <img src="{{ 'assets/images/icons/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background line">
+                <div class="bg-shapes">
+                    <img src="{{ 'assets/images/backgrounds/dashed_line_plus_shapes.svg' | relative_url }}" alt="Background line">
                 </div>
                 <img class="mb-4" src="{{ 'assets/images/icons/about-icon.svg' | relative_url }}" alt="About" width="80">
                 <h5 class="text-info spaced mb-5">VNK CONSULTANTS SERVICES</h5>
