--- a/_includes/services/approach.html
+++ b/_includes/services/approach.html
@@ -1,4 +1,7 @@
-<section class="section-padding">
+<section class="section-padding position-relative">
+    <div class="bg-shapes bg-shapes-approach">
+        <img src="{{ 'assets/images/backgrounds/contact.svg' | relative_url }}" alt="Background shapes">
+    </div>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-lg-5" data-aos="fade-up">
