--- a/_includes/contact/contact-form.html
+++ b/_includes/contact/contact-form.html
@@ -1,4 +1,7 @@
-<section class="contact-form">
+<section class="contact-form behind-header">
+    <div class="bg-shapes bg-shapes-contact">
+        <img src="{{ 'assets/images/backgrounds/contact.svg' | relative_url }}" alt="Background shapes">
+    </div>
     <div class="container">
         <div class="row">
             <div class="col-md-6 mb-5 mb-md-0">
