--- a/_includes/services/infrastructure-solutions.html
+++ b/_includes/services/infrastructure-solutions.html
@@ -1,4 +1,7 @@
-<div class="section-padding bg-secondary-gradient">
+<div class="section-padding bg-secondary-gradient position-relative">
+    <div class="bg-shapes bg-shapes-solutions">
+        <img src="{{ 'assets/images/backgrounds/contact.svg' | relative_url }}" alt="Background shapes">
+    </div>
     <div class="container">
         <div class="row justify-content-around section-margin">
             <div class="col-md-5 text-center" data-aos="fade-up">
