--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -47,7 +47,7 @@ h1, h4, h5 {
     background-image: linear-gradient(111deg, #e7eeff, #def5ff);
 }
 
-.bg-shapes-title {
+.bg-shapes {
     position: absolute;
     left: 50%;
     top: -240px;
