Add more background shapes and fix others

--- a/_includes/common/team-list.html
+++ b/_includes/common/team-list.html
@@ -1,4 +1,7 @@
-<section class="section-padding {{ include.class }}">
+<section class="section-padding position-relative {{ include.class }}">
+    <div class="bg-shapes bg-shapes-team">
+        <img src="{{ 'assets/images/backgrounds/core_team.svg' | relative_url }}" alt="Background shapes">
+    </div>
     <div class="container">
         <div class="row mb-5">
             <div class="col" data-aos="fade-up">
